# FastAPI-Toolkit

./: .dockerignore  .env  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile2  README.md  alembic.ini  database.db  docker-compose.yml  pyproject.toml  test-docker-compose.yml
.github/workflows/: dev.yml
alembic/: env.py
alembic/versions/: 03faac49a92e_init.py  180cc3782c77_init.py  297ae216d270_init.py  a8599ff7d4b9_init.py  ab5b634132be_init.py
app/: __init__.py  celery.py  conftest.py  db.py  main.py  mongo.py  redis.py  tasks.py  test_main.py
app/auth/: handlers.py  handlers_scopes.py  models.py  schema.py  schemas.py
app/files/: handlers.py
app/live_socket/: handlers.py
app/nosql/: handlers.py  models.py
app/songs/: handlers.py  models.py  schemas.py  tables.py  test_handlers.py
app/tasks/: tasks.py
app/templates/: index.html
app/utils/: pagination.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: store.ts
frontend/lib/features/auth/: authApiSlice.ts
frontend/src/app/: layout.tsx
migrations/: env.py
migrations-old/: env.py  script.py.mako
migrations/versions/: 239dc5d98ec8_init.py  48ab77c33e94_added_password_to_user_table.py  982fd2bb72de_init.py  9d025221ab57_init.py  9d1edca5c301_init.py  f357681d67b4_init.py  fbde88360de8_added_user_table.py
nginx/: Dockerfile  nginx.conf
scripts/: backend_pre_start.py  insert_admin_user.py  prestart.sh  start.sh
