[tool.poetry]
name = "fastapi-toolkit"
version = "0.0.2"
description = "A Sample FastAPI app"
authors = ["Payam Taheri"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.27"
#psycopg2-binary = "^2"
redis = "^4"
celery = "^5"
alembic = "^1"
tenacity = "^8"
aiosqlite = "^0.20"
pytest = "^8"
httpx = "^0.26"
pre-commit = "^3"
python-multipart = "0.0.9"
python-jose = { version = "^3", extras = ["cryptography"] }
passlib = { version = "^1", extras = ["bcrypt"] }
websockets = "^12"
coverage = "^7"
motor = "^3"
pymongo = "^4"
Jinja2 = "^3"
asyncpg = "^0.29"
pytest-asyncio = "^0.23"

[tool.poetry.group.dev.dependencies]
commitizen = "^3"


[tool.poetry.group.lint.dependencies]
ruff = "^0.2"
mypy = "^1"

[tool.poetry.group.mypy.dependencies]
types-python-jose = "^3"
types-passlib = "^1"
celery-stubs = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
indent-width = 4
line-length = 88
target-version = "py311"
exclude = ["migrations/*.*", "alembic/*.*"]

lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]


[tool.mypy]
python_version = 3.11
exclude = ['.venv/*.*', 'app/songs/models.py', 'migrations/*.*', "alembic/*.*"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.2"
tag_format = "v$version"
version_files = [
    "README.md",
    "pyproject.toml:version",
    "app/__init__.py:__version__",
]
major_version_zero = true